--- a/app/globals.css
+++ b/app/globals.css
@@ -71,6 +71,9 @@
 	svg {
 		@apply w-3.5 h-3.5;
 	}
+	h1 {
+		@apply text-2xl font-bold;
+	}
 	.tiptap p.is-editor-empty:first-child::before {
 		color: #adb5bd;
 		content: attr(data-placeholder);
