lots of changes

--- a/app/globals.css
+++ b/app/globals.css
@@ -104,6 +104,6 @@
 		pointer-events: none;
 	} */
 	ol {
-		@apply list-decimal ps-5 mt-4 [&>li]:my-2 [&>li]:ps-2;
+		@apply ps-5 mt-4 [&>li]:my-2 [&>li]:ps-2;
 	}
 }
