--- a/app/globals.css
+++ b/app/globals.css
@@ -68,6 +68,11 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+
+	main {
+		@apply min-h-[calc(100vh-49px)];
+	}
+
 	svg {
 		@apply w-3.5 h-3.5;
 	}
